src/test/ui/macros/macro-missing-delimiters.stderr
error: invalid macro matcher; matchers must be contained in balanced delimiters
  --> $DIR/macro-missing-delimiters.rs:12:5
   |
LL |     baz => () //~ ERROR invalid macro matcher;
   |     ^^^

error: aborting due to previous error

